tests/rosetta/out/Fortran/averages-simple-moving-average.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program averages_simple_moving_average
  implicit none
    integer :: i
    integer :: y
    integer :: dot
    character(len=100) :: s0
      integer :: decs
    integer :: out
    integer, allocatable, dimension(:) :: res
    integer :: sum
      integer :: denom
      integer, allocatable, dimension(:) :: app1
    integer :: sma3
    integer :: sma5
      integer :: line
  call main()
  
  contains
  recursive integer function indexOf(s,ch) result(res)
    character(len=100), intent(in) :: s
    character(len=100), intent(in) :: ch
    i = 0
    do while ((i < size(s)))
      if ((s(i+1:(i + 1)) == ch)) then
        res = i
        return
      end if
      i = (i + 1)
    end do
    res = -1
    return
  end function indexOf
  recursive character(len=100) function fmt3(x) result(res)
    real, intent(in) :: x
    y = (real(int(((((x * 1000.0)) + 0.5)))) / 1000.0)
    write(s0,'(G0)') y
    s = s0
    dot = indexOf(s,'.')
    if (((dot == 0) - 1)) then
      s = s // '.000'
    else
      decs = ((size(s) - dot) - 1)
      if ((decs > 3)) then
        s = s(0+1:(dot + 4))
      else
        do while ((decs < 3))
          s = s // '0'
          decs = (decs + 1)
        end do
      end if
    end if
    res = s
    return
  end function fmt3
  recursive character(len=100) function pad(s,width) result(res)
    character(len=100), intent(in) :: s
    integer, intent(in) :: width
    out = s
    do while ((size(out) < width))
      out = ' ' // out
    end do
    res = out
    return
  end function pad
  recursive integer function smaSeries(xs,period) result(res)
    integer, intent(in) :: xs
    integer, intent(in) :: period
    allocate(res(0))
    sum = 0.0
    i = 0
    do while ((i < size(xs)))
      sum = (sum + xs(((i)+1)))
      if ((i >= period)) then
        sum = (sum - xs((((i - period))+1)))
      end if
      denom = (i + 1)
      if ((denom > period)) then
        denom = period
      end if
      if (allocated(app1)) deallocate(app1)
      allocate(app1(size(res)+1))
      app1(1:size(res)) = res
      app1(size(res)+1) = (sum / (real(denom)))
      res = app1
      i = (i + 1)
    end do
    res = res
    return
  end function smaSeries
  recursive subroutine main()
    xs = (/1.0,2.0,3.0,4.0,5.0,5.0,4.0,3.0,2.0,1.0/)
    sma3 = smaSeries(xs,3)
    sma5 = smaSeries(xs,5)
    print *, 'x       sma3   sma5'
    i = 0
    do while ((i < 10))
      line = trim(trim(trim(pad(fmt3(xs(((i)+1))),5) // '  ') // pad(fmt3(sma3(((i)+1))),5)) // '  ') // pad(fmt3(sma5(((i)+1))),5)
      print *, line
      i = (i + 1)
    end do
  end subroutine main
end program averages_simple_moving_average
